# moxi

./: .gitignore  .gitmodules  CNAME  HACKING  Makefile.am  README  TODO.moxi  _config.yml  agent.h  agent_config.c  agent_ping.c  agent_stats.c  assoc.c  autogen.sh  cJSON.README  cJSON.c  cJSON.h  cache.c  cache.h  changelog.html  check_moxi.c  check_moxi_agent.c  check_util.c  check_work.c  config_static.h  configure.ac  cproxy.c  cproxy.h  cproxy_config.c  cproxy_front.c  cproxy_multiget.c  cproxy_protocol.c  cproxy_protocol_a.c  cproxy_protocol_a2a.c  cproxy_protocol_a2b.c  cproxy_protocol_b.c  cproxy_protocol_b2b.c  cproxy_stats.c  daemon.c  genhash.c  (+33 more)
_layouts/: default.html
css/: default.css
debian/: changelog.in  control  copyright  docs  moxi.default  moxi.examples  moxi.init  rules
doc/: Makefile.am  building-moxi-packages.txt  moxi.1
doc/moxi/: configuration.org
libmemcached/: .bzrignore  .hgignore  ChangeLog  Makefile.am  configure.ac
libmemcached-0.30/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.status  configure  configure.ac  libtool
libmemcached-0.30/clients/: Makefile  Makefile.am  Makefile.in  execute.c  memcat.c  memcp.c  memdump.c  memerror.c  memflush.c  memrm.c  memslap.c  memstat.c  utilities.c  utilities.h
libmemcached-0.30/config/: config.guess  config.sub  ltmain.sh
libmemcached-0.30/docs/: Makefile  Makefile.am  Makefile.in  libmemcached.pod  libmemcached_examples.pod  memcached_auto.pod  memcached_callback.pod  memcached_create.pod  memcached_delete.pod  memcached_dump.pod  memcached_flush_buffers.pod  memcached_generate_hash_value.pod  memcached_get.pod  memcached_pool.pod  memcached_server_st.pod  memcached_servers.pod  memcached_set.pod  memcached_stats.pod  memcached_strerror.pod  memcached_version.pod  memcat.pod  memdump.pod  memrm.pod
libmemcached-0.30/libmemcached/: Makefile.am  Makefile.in  byteorder.c  common.h  hsieh_hash.c  jenkins_hash.c  libmemcached_config.h  libmemcached_config.h.in  md5.c  memcached.h  memcached.hh  memcached_analyze.c  memcached_auto.c  memcached_behavior.c  memcached_callback.c  memcached_connect.c  memcached_constants.h  memcached_delete.c  memcached_do.c  memcached_dump.c  memcached_fetch.c  memcached_flush.c  memcached_flush_buffers.c  memcached_get.c  memcached_get.h  memcached_hash.c  memcached_hosts.c  memcached_io.c  memcached_io.h  memcached_key.c  memcached_parse.c  memcached_pool.h  memcached_quit.c  memcached_response.c  memcached_result.c  memcached_result.h  memcached_server.c  memcached_server.h  memcached_stats.c  memcached_storage.c  (+8 more)
libmemcached-0.30/libmemcached/memcached/: README.txt
libmemcached-0.30/libmemcachedutil/: Makefile.in  memcached_pool.c
libmemcached-0.30/m4/: 64bit.m4  byteorder.m4  debug.m4  dtrace.m4  memcached.m4  pod2man.m4  protocol_binary.m4  setsockopt.m4  util.m4
libmemcached-0.30/support/: Makefile.in  libmemcached-fc.spec.in  libmemcached.spec  libmemcached.spec.in
libmemcached-0.30/tests/: Makefile  Makefile.am  Makefile.in  atomsmasher.c  function.c  output.res  plus.cpp  server.c  test.c  test.h  udp.c
libmemcached-0.30/tests/r/: memcat.res  memcp.res  memrm.res  memstat.res
libmemcached/.bzr/branch/: branch.conf  last-revision
libmemcached/.bzr/checkout/: dirstate  merge-hashes
libmemcached/.bzr/repository/: pack-names
libmemcached/clients/: Makefile.am  execute.c  generator.c  memcat.c  memcp.c  memdump.c  memflush.c  memrm.c  memslap.c  memstat.c  utilities.c
libmemcached/config/: bootstrap  byteorder.m4  dtrace.m4  memcached.m4  protocol_binary.m4  setsockopt.m4
libmemcached/docs/: Makefile.am  libmemcached.pod  memcached_behavior.pod  memcached_callback.pod  memcached_dump.pod  memcached_generate_hash_value.pod  memcached_get.pod  memcached_server_st.pod  memcached_stats.pod
libmemcached/libmemcached/: Makefile.am  common.h  jenkins_hash.c  memcached.c  memcached.h  memcached.hh  memcached_analyze.c  memcached_auto.c  memcached_behavior.c  memcached_callback.c  memcached_connect.c  memcached_constants.h  memcached_delete.c  memcached_dump.c  memcached_fetch.c  memcached_get.c  memcached_hash.c  memcached_hosts.c  memcached_io.c  memcached_io.h  memcached_key.c  memcached_parse.c  memcached_pool.h  memcached_response.c  memcached_result.c  memcached_result.h  memcached_server.c  memcached_server.h  memcached_stats.c  memcached_storage.c  memcached_strerror.c  memcached_string.c  memcached_string.h  memcached_types.h  memcached_version.c
libmemcached/libmemcachedutil/: Makefile.am  memcached_pool.c
libmemcached/m4/: hsieh.m4  util.m4
libmemcached/tests/: Makefile.am  atomsmasher.c  function.c  output.res  plus.cpp  server.c
m4/: pandora_canonical.m4  pandora_have_better_malloc.m4  pandora_have_libconflate.m4  pandora_have_libdrizzle.m4  pandora_have_libmemcached.m4  pandora_platform.m4  pandora_plugins.m4  pandora_print_callstack.m4  pandora_pthread.m4  pandora_use_pipe.m4  pandora_vc_build.m4  pandora_warnings.m4  pandora_with_python.m4  pandora_with_python3.m4  version.m4
patches/: README
patches/libmemcached/: Makefile.am.patch  Makefile.in.patch  memcached_dump.c.patch  protocol_binary.m4.patch
scripts/: moxi-init.rhat.in
scripts/examples/: moxi.conf.direct  moxi.conf.service
scripts/rpm/: build-fc-rpm  moxi.spec.in
t/: cproxy.pl  cproxy.t  cproxy_expect.py  cproxy_expect.tests  cproxy_mock.py  cproxy_one.pl  mc_bin_client.py  memcacheConstants.py  moxi.pl  moxi_all.pl  moxi_mock.cfg  moxi_mock.pl  moxi_mock.py  moxi_mock_a2a.py  moxi_mock_a2ascii.py  moxi_mock_a2b.py  moxi_mock_a2b_auth.py  moxi_mock_a2binary.py  moxi_mock_auth.py  moxi_mock_b2b.py  moxi_mock_server.py  moxi_multitenancy.py  moxi_multitenancy_default.py  moxi_multitenancy_rest.cfg  moxi_multitenancy_rest_default.cfg  moxi_one.pl  rest_mock.rb  stats.t  vbucket1.cfg  vbucket2.cfg  vbucket_rest1.cfg  vbucket_rest2.cfg  whitespace.t
t/lib/: MemcachedTest.pm
win32/: win32.h
